# intabai

./: README.md
.github/workflows/: ci.yml  publish.yml
web/: .gitignore  index.html  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
web/patches/: onnxruntime-web+1.24.3.patch
web/public/: CNAME
web/scripts/: analyze-vae-conv3d.py  analyze-vae-decoder-structure.py  build-conv3d-chain-probe.py  build-conv3d-probe.py  check-block-cross-attn.py  check-block-vs-pytorch.py  check-shell-post-vs-pytorch.py  check-shell-pre-vs-pytorch.py  check-text-encoder-layer0.py  check-text-encoder-vs-pytorch.py  chunk-attn1-onnx.py  clip_reference_test_gen.py  diagnose-vae-precision.py  dump-reference-block-00.py  dump-reference-shell-pre.py  dump-reference-text-embeds.py  dump-resnet-nodes.py  export-fastwan-text-encoder.py  export-fastwan-transformer.py  export-fastwan-vae-kl-streaming.py  export-fastwan-vae-kl.py  export-fastwan-vae.py  export-zimage-transformer.py  expose-block-00-intermediates.py  extract-inswapper-emap.py  inspect-layer0.py  patch-onnx-webgpu.py  patch-ort-conv3d-fp16.mjs  patch-ort-matmul-fp32-acc.mjs  patch-vae-conv3d-tile.py  probe-attn-matmul.py  probe-fastwan-vae-final-block.py  pyproject.toml  quantize-embedding.py  quantize-fastwan-blocks.py  reorder-onnx-nodes.py  shard-onnx-layers.py  split-conv-to-tiles.py  split-fastwan-vae-decoder.py  split-half-resnet-at-pad.py  (+1 more)
web/scripts/lib/: chunk_attn1.py  onnx_patch_common.py
web/src/: index-main.ts
web/src/fastwan/: embedding.ts  (+9 more)
web/test/: fp16.test.ts  tokenizer.test.ts
(+66 files in other folders)
