[project]
name = "intabai-scripts"
version = "0.1.0"
description = "Model export, quantization, and sharding scripts for intabai"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch>=2.11",
    "diffusers @ git+https://github.com/huggingface/diffusers.git",
    "transformers>=4.57",
    "onnx>=1.21",
    "onnxscript>=0.6",
    "onnxruntime>=1.24",
    "huggingface-hub",
    "accelerate>=1.0",
    "optimum[onnxruntime]",
]

[tool.uv]
# CPU-only PyTorch (no CUDA) to keep the venv small
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
